--- a/roadmap/web/download.html
+++ b/roadmap/web/download.html
@@ -14,7 +14,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="maps.html">Maps</a>
 <a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
-<a class="normal" href="list.html">Mailing List</a>
+<a class="normal" href="list.html">Mail</a>
+<a class="normal" href="todo.html">Todo</a>
 <HR>
 <P>
 <b>Disclaimer</b>: RoadMap is known to have bugs. The data provided by
@@ -44,6 +45,13 @@ A version of RoadMap for the Sharp Zaurus is also available from
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 <P>
+<P>RoadMap v1.0rc8:
+<A class=normal href="/roadmap/roadmap_1_0rc8_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc8_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc8_armv4l.tar.gz">Linux/ARM binaries</A>.
+
 <P>RoadMap v1.0rc7:
 <A class=normal href="/roadmap/roadmap_1_0rc7_src.tar.gz">Sources only</A>,
 <A class=normal 
