--- a/roadmap/web/hardware.html
+++ b/roadmap/web/hardware.html
@@ -14,7 +14,8 @@ href="/sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="maps.html">Maps</a>
 <a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
-<a class="normal" href="list.html">Mailing List</a>
+<a class="normal" href="list.html">Mail</a>
+<a class="normal" href="todo.html">Todo</a>
 <HR>
 <P>The intend of this page is to establish a list of equipment known to work
 with RoadMap. The list is still short, mostly because the page has just been
