--- a/roadmap/web/index.html
+++ b/roadmap/web/index.html
@@ -27,10 +27,11 @@ RoadMap is available from the following mirror sites:
  <A class=normal 
          href="http://roadmap.saignon.net/">roadmap.saignon.net</A>
 <P>
-A version of RoadMap for the Sharp Zaurus is also available from
-<A class="norma;" href="http://moria.ionkov.net/zaurus/zroadmap">
-  Latchesar Ionkov
-</A>
+A version of RoadMap for the Sharp Zaurus is also made available by
+Latchesar Ionkov on the 
+<A class="norma;" href="http://community.zaurus.com/projects/zroadmap/">
+  Sharp's Zaurus communauty web site
+</A>.
 </CENTER>
 <HR>
 <BR>
@@ -38,11 +39,16 @@ A version of RoadMap for the Sharp Zaurus is also available from
    (c) Copyright Pascal Martin, 2003 (pascal dot martin at iname dot com)
 </CENTER>
 <P>RoadMap is a program for street (and car) navigation on Linux. It displays
-a street map, can track the position provided by a NMEA-compliant GPS receiver
-and identifies the current street that matches this position. A rudimentary
-trip feature allows RoadMap to display some basic navigation information
-(distance to the destination, direction, speed, etc..). Voice messages are
-generated that duplicate some of the screen information.
+a street map, tracks the position provided by a NMEA-compliant GPS receiver,
+identifies the street matching this GPS position and announces the name of
+the other street at the next intersection. A rudimentary trip feature allows
+RoadMap to display some basic navigation information (distance to the
+destination, direction, speed, etc..). Voice messages are generated that
+duplicate some of the screen information.
+
+<P>It is possible to display a specific area by providing a (complete or
+incomplete) postal address, the intersection of two streets or an exact
+position (longitude / latitude).
 
 <P>The map files used by RoadMap are generated from the TIGER files provided
 by the US Census Bureau, and thus cover the USA only.  The RoadMap map format
@@ -53,8 +59,8 @@ endian processor (such as the Intel Pentium and StrongARM processors).
 <P>RoadMap has been designed to be usable on both a desktop or laptop PC, 
 or on a PDA such as the iPAQ from HP (formely from COMPAQ). It can use either
 the Gtk 1.2 , Gtk 2.0 or QT graphic library for its user interface. The Qt
-interface supports the Sharp's Zaurus PDA (see above). These machines can
-all use the maps provided on this site.
+interface supports the Sharp's Zaurus PDA. All these machines share the same
+endianness and can use the maps provided on this site.
 
 <P>RoadMap is at an early stage of development. At this time there are no 
 routing features implemented yet. The plan for the future is to implement
@@ -65,8 +71,8 @@ street are not indicated). The US Census Bureau has clearly indicated that
 it does not plan to add these information in the future (the USCB does
 not need them).
 
-<P>RoadMap uses <b>gpsd</b> for the GPS link and <b>flite</b> for the voice
-messages.
+<P>RoadMap uses <b>gpsd</b> for the GPS link and <b>flite</b> (festival lite)
+for the voice messages.
 
 <P>RoadMap comes with its own GPS status screen, which provides an overview of 
 the satellites received and highlights those the GPS has a fix on. This status 
@@ -87,10 +93,6 @@ displays the name of the street, road or freeway (if any) that is the closest
 to the mouse hotpoint. On the iPAQ the "calendar" button is used to zoom in,
 the "telephone" button is used to zoom out, the arrow buttons are used to move
 the map and the Compaq ("menu") button is used as "quit".
-
-<P>It is possible to display a specific area by providing a (complete or
-incomplete) postal address, the intersection of two streets or an exact
-position (longitude / latitude).
 
 <P>When entering a street name, the street prefix, suffix and type, if
 provided, must be among the abbreviations listed by the US Census Bureau
