Added Mac/Linux support, from user feedback.

--- a/roadmap/web/hardware.html
+++ b/roadmap/web/hardware.html
@@ -29,7 +29,7 @@ to the <a class="normal" href="list.html">RoadMap mailing list</a>.
 receivers. A frequent source of compatibility problem is the support for
 USB devices in the Linux kernel, as some GPS USB receivers do not seem
 to use a standard USB communication device model.
-<HR> <BR>
+<HR>
 <P>Host Computers:
 <UL>
   <LI>IBM PC and compatible running
@@ -43,10 +43,15 @@ to use a standard USB communication device model.
       the <a class="normal" href="http://www.handhelds.org/">Handhelds.org
       site</a> for more information on supported models.
   <LI><a class="normal" href="http://www.myzaurus.com/">Sharp Zaurus</a>.
+  <LI><a class="normal" href="http://www.apple.com/">Apple G3</a> (and
+      possibly most PowerPC MAC models) running
+      <a class="normal" href="http://www.yellowdoglinux.com/">Yellow Dog
+      Linux</a> (RoadMap needs to be rebuilt from source on this hardware, as
+      no binary distribution exists.. yet).
 </UL>
 <P>GPS Receivers Tested With RoadMap:
 <UL>
-  <LI>Garmin 38 (now obsolete), and probably most
+  <LI>Garmin 38 (now obsolete), Garmin eTrex and probably most
       <a class="normal" href="http://www.garmin.com/">Garmin</a> GPS devices.
   <LI><a class="normal"
          href="http://www.rayming.com/products/tripnav_tn204.htm">
