--- a/roadmap/web/maps.html
+++ b/roadmap/web/maps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD><TITLE>RoadMap: US County Maps</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252"><LINK 
-href="/sitestandard.css" type=text/css rel=stylesheet>
+href="sitestandard.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY class=homeview>
 <CENTER>
@@ -39,14 +39,19 @@ Thank you for your understanding.
 <HR>
 <CENTER>
 <P>
-RoadMap is available from the following mirror sites:
+The RoadMap maps are available from the following mirror sites:
+<P>
+<A class=normal 
+         href="http://noscience.net/~pmartin/roadmap/">noscience.net</A> 
 <P>
 <A class=normal 
          href="http://roadmap.digitalomaha.net/">roadmap.digitalomaha.net</A> 
 <P>
-<P>
  <A class=normal 
          href="http://roadmap.saignon.net/">roadmap.saignon.net</A>
+<P>
+  <A class="norma;" href="http://community.zaurus.com/projects/zroadmap/">
+         Sharp's Zaurus communauty web site</A>.
 </CENTER>
 <HR> <BR>
 <P>The following file is the RoadMap directory of counties. It is used to select 
