--- a/trunk/roadmap/web/hardware.html
+++ b/trunk/roadmap/web/hardware.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD><TITLE>RoadMap: Hardware Compatibility List</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252"><LINK 
-href="/sitestandard.css" type=text/css rel=stylesheet>
+href="sitestandard.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY class=homeview>
 <CENTER>
