--- a/trunk/roadmap/web/index.html
+++ b/trunk/roadmap/web/index.html
@@ -22,6 +22,9 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 RoadMap is available from the following mirror sites:
 <P>
 <A class=normal 
+         href="http://noscience.net/~pmartin/roadmap/">noscience.net</A> 
+<P>
+<A class=normal 
          href="http://roadmap.digitalomaha.net/">roadmap.digitalomaha.net</A> 
 <P>
  <A class=normal 
