Add a warning about map endianess issue.

--- a/roadmap/web/maps.html
+++ b/roadmap/web/maps.html
@@ -26,6 +26,11 @@ RoadMap for Navigation</b>.
 <b>Caution</b>: always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
 have a passenger use RoadMap, not the driver.
+<P>
+<b>Caution</b>: the maps available on this pages are <i>little endian</i>,
+i.e. they will work fine on a PC, Zaurus or Linux/iPAQ. These maps
+will <i>not</i> work on PowerPC (i.e. MAC) or Sparc computers. Maps for
+these architectures might become available in the future. Stay tuned!
 <HR>
 <P>
 <CENTER>
