Prepare for the 1.0rc9 release.

--- a/roadmap/web/download.html
+++ b/roadmap/web/download.html
@@ -45,6 +45,13 @@ A version of RoadMap for the Sharp Zaurus is also available from
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 <P>
+<P>RoadMap v1.0rc9:
+<A class=normal href="/roadmap/roadmap_1_0rc9_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc9_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc9_armv4l.tar.gz">Linux/ARM binaries</A>.
+
 <P>RoadMap v1.0rc8:
 <A class=normal href="/roadmap/roadmap_1_0rc8_src.tar.gz">Sources only</A>,
 <A class=normal 
