Prepare for the 1.0rc9 release.

--- a/roadmap/web/bugs.html
+++ b/roadmap/web/bugs.html
@@ -40,7 +40,11 @@ due to a handful of bugs. Here are the details:
 <UL>
   <LI>On the HP iPAQ, and possibly on other PDA as well, RoadMap sometime
   becomes sluggish and process X events after a significant delay. There is
-  not yet an explanation for this behavior.
+  not yet an explanation for this behavior. <em>This might have been fixed in
+  1.0rc9</em>
+  <LI>When tracking the GPS position with a trip started, if one use the
+  arrows to move the vehicule's sprite to the side, then the direction
+  (red) arrow goes the other way.
   <LI>It seems that RoadMap has some memory leaks problems: playing the
   same trip log over and over causes the size of the RoadMap process to
   grow.
