--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -32,6 +32,9 @@ have a passenger use RoadMap, not the driver.
 RoadMap is available from the following mirror sites:
 <P>
 <A class=normal 
+         href="http://noscience.net/~pmartin/roadmap/">noscience.net</A> 
+<P>
+<A class=normal 
          href="http://roadmap.digitalomaha.net/">roadmap.digitalomaha.net</A> 
 <P>
  <A class=normal 
@@ -46,93 +49,93 @@ A version of RoadMap for the Sharp Zaurus is also available from
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 <P>
 <P>RoadMap v1.0rc9:
-<A class=normal href="/roadmap/roadmap_1_0rc9_src.tar.gz">Sources only</A>,
+<A class=normal href="roadmap/roadmap_1_0rc9_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc9_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc9_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc9_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc9_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>RoadMap v1.0rc8:
-<A class=normal href="/roadmap/roadmap_1_0rc8_src.tar.gz">Sources only</A>,
+<A class=normal href="roadmap/roadmap_1_0rc8_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc8_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc8_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc8_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc8_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>RoadMap v1.0rc7:
-<A class=normal href="/roadmap/roadmap_1_0rc7_src.tar.gz">Sources only</A>,
+<A class=normal href="roadmap/roadmap_1_0rc7_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc7_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc7_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc7_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc7_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>RoadMap v1.0rc6:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc6_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc6_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc6_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc6_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc6_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc6_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v1.0rc5:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc5_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc5_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc5_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc5_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc5_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc5_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v1.0rc4:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc4_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc4_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc4_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc4_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc4_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc4_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v1.0rc3:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc3_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc3_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc3_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc3_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc3_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc3_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v1.0rc2:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc2_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc2_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc2_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc2_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc2_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc2_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v1.0rc1:
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc1_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_1_0rc1_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc1_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_1_0rc1_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_1_0rc1_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_1_0rc1_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v0.15:
 <A class=normal 
-   href="/roadmap/roadmap_0_15_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_0_15_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_0_15_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_0_15_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
-   href="/roadmap/roadmap_0_15_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_0_15_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v0.14:
 <A class=normal 
-   href="/roadmap/roadmap_0_14_src.tar.gz">Sources only</A>,
+   href="roadmap/roadmap_0_14_src.tar.gz">Sources only</A>,
 <A class=normal 
-   href="/roadmap/roadmap_0_14_i686.tar.gz">Linux/i686 binaries</A>,
+   href="roadmap/roadmap_0_14_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal
-   href="/roadmap/roadmap_0_14_armv4l.tar.gz">Linux/ARM binaries</A>.
+   href="roadmap/roadmap_0_14_armv4l.tar.gz">Linux/ARM binaries</A>.
 
 <P>Roadmap v0.13:
-<A class=normal href="/roadmap/roadmap_0_13_src.tgz">Sources only</A>,
-<A class=normal href="/roadmap/roadmap_0_13_i686.tgz">Linux/i686 binaries</A>,
-<A class=normal href="/roadmap/roadmap_0_13_armv4l.tgz">Linux/ARM binaries</A>.
+<A class=normal href="roadmap/roadmap_0_13_src.tgz">Sources only</A>,
+<A class=normal href="roadmap/roadmap_0_13_i686.tgz">Linux/i686 binaries</A>,
+<A class=normal href="roadmap/roadmap_0_13_armv4l.tgz">Linux/ARM binaries</A>.
 </BODY></HTML>
 
