--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -17,6 +17,17 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
 <HR> <BR>
+<P>Roadmap v1.0 (September XX, 2003): 
+<UL>
+  <LI>The "trip direction" red arrow sprite was acting weird when moving
+      the map's view (pan and rotate). The cause was that the sprite's
+      coordinates were not rotated as these should have been.
+  <LI>Fix the map download crashing when GPS data is received: this was
+      because RoadMap was mapping the file being downloaded, before it
+      was complete. The (temporary) solution is to freeze any RoadMap
+      GPS and screen update, but the long term solution should be to
+      transfer the map to a temporary file and then rename it.
+</UL>
 <P>Roadmap v1.0rc9 (August 24, 2003): 
 <UL>
   <LI>Added an on-the-fly map download mode. When this mode is enabled,
