--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -27,6 +27,10 @@ href="sitestandard.css" type=text/css rel=stylesheet>
       was complete. The (temporary) solution is to freeze any RoadMap
       GPS and screen update, but the long term solution should be to
       transfer the map to a temporary file and then rename it.
+  <LI>Implement download using the HTTP protocol.
+  <LI>Uncompress gzip and bzip2 files after download, detected using
+      well known suffixes. Downloading compressed files helps cut the
+      download time by a factor of 2 in average.
 </UL>
 <P>Roadmap v1.0rc9 (August 24, 2003): 
 <UL>
