--- a/roadmap/web/todo.html
+++ b/roadmap/web/todo.html
@@ -20,12 +20,20 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <P>This page lists the changes planned for the next version of RoadMap. Please
 feel free to contact the author for more ideas.
 <P>
+Now that RoadMap 1.0 has been released, a 1.1 development branch will be
+started, with the highest priority given to some needed changes to the map
+format. This means there will be no map provided for the 1.1 branch,
+considering their unstable nature. The 1.0 branch will be maintained as
+the "stable" branch. Some of the changes above may still find their way
+in the stable branch, as long as map compatibility is maintained. It may
+take some time before the development branch appears on the web site,
+depending on how many bugs are discovered in the stable version.
+<P>
+When 1.1 will become stable, a 1.2 stable branch will be created and
+an 1.3 development branch will be started anew, and so on.
+<P>
+Here is the detail description of the changes planned so far:
 <UL>
-  <LI><b>Support for downloading maps from a web server</b>. The idea here is
-  to add HTTP to the list of protocols available in the download mechanism.
-  The protocol module should be smart enough to recognize .gz files and
-  uncompress them right after the download took place.
-
   <LI><b>More natural street naming</b>. RoadMap requires the street names to
   be entered using the US Census Bureau's own conventions (ST for streets, AVE
   for avenues and so on..). It would be more friendly to authorize some
@@ -42,8 +50,53 @@ feel free to contact the author for more ideas.
 
   <LI><b>File dialogs are too large for PDA screens</b>. RoadMap was once
   converted so to use the standard toolkit file dialogs. This is a problem
-  with small PDA screens, as some toolkits (namely the GTK 1 and 2 ones) were
-  designed for larger screens and do not fit in an iPAQ one.
+  with small PDA screens, as some toolkits (namely the GTK 1 and 2 ones)
+  were designed for larger screens and do not fit in an iPAQ one. The solution
+  might be to implement a GPE version of RoadMap, as GPE is the standard
+  GTK-based graphic environment for the iPAQ.
+
+  <LI><b>[1.1] Merge street number ranges</b>. The US Census Bureau database
+  has separate street ranges for the left and right sides of each street
+  block. When both sides have matching ranges (for example 1020 - 1090 and
+  1021 - 1091), a lot of space could be saved by merging then in a single range
+  (such as 1020 - 1091). At that time, RoadMap does not use the "side" info
+  anyway.
+
+  <LI><b>[1.1] Use GPS time and map's timezone</b>. The GPS receiver provides a
+  reliable universal time as well as the current location. This is all what
+  RoadMap needs to show the correct local time:
+  <UL>
+    <LI>Associate a timezone to each county.
+    <LI>When showing a particular location on the map, display the local time
+    for this location.
+    <LI>Show estimated time of arrival in the destination's timezone.
+   </UL>
+   One might think of setting the UNIX time and system timezone, but that
+   would be a bad idea: this would cause a whole mess when replaying GPS logs,
+   RoadMap would need to be root or have the set UID bit set and managing
+   system setup is best left to system daemons.
+
+  <LI><b>[1.1] Modular map format</b>. RoadMap map format is such today that all
+  the information must be contained in a single file. RoadMap should be
+  able to display, and use, data from multiple county files. The benefits
+  are that one can come with his own additional information (such as
+  railroad tracks) without modifying the existing maps or making them larger.
+  In addition the current set of maps could be cut in two (separating the
+  street shapes from the street names) to lower the amount of data mapped by
+  RoadMap when displaying the map on the screen (especially when zoomed out).
+
+  <LI><b>[1.1] Modular map rendering</b>. the RoadMap map rendering code
+  should be made more modular so that a new type of data can be defined,
+  associated with a plugin to implement the rendering code.
+
+  <LI><b>Track more than one GPS source</b>. RoadMap should allow the user
+  to track alternate GPS sources as defined by the user (like GpsDrive's
+  friendsd).
+
+  <LI><b>Interface with address book applications</b>. RoadMap should be
+  able to interface with address book databases to get street addresses
+  from there. Instead of specifying a destination address, one would
+  provide the name of a person.
 </UL>
 </BODY></HTML>
 
