Record proposed icons.

--- a/roadmap/web/todo.html
+++ b/roadmap/web/todo.html
@@ -32,6 +32,8 @@ depending on how many bugs are discovered in the stable version.
 When 1.1 will become stable, a 1.2 stable branch will be created and
 an 1.3 development branch will be started anew, and so on.
 <P>
+(The changes believed to break compatibility with 1.0 are maked with "[1.1]".)
+<P>
 Here is the detail description of the changes planned so far:
 <UL>
   <LI><b>More natural street naming</b>. RoadMap requires the street names to
@@ -54,6 +56,10 @@ Here is the detail description of the changes planned so far:
   were designed for larger screens and do not fit in an iPAQ one. The solution
   might be to implement a GPE version of RoadMap, as GPE is the standard
   GTK-based graphic environment for the iPAQ.
+
+  <LI><b>Use icons on the toolbar (at least)</b>. The RoadMap toolbar is
+  made of text labels only, mostly because I am too lazzy for anything more
+  complicated. Darrick Hartman has proposed to create some icons.
 
   <LI><b>[1.1] Merge street number ranges</b>. The US Census Bureau database
   has separate street ranges for the left and right sides of each street
