--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -17,6 +17,13 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
 <HR> <BR>
+<P>Roadmap v1.0.1 (September X, 2003): 
+<UL>
+  <LI>Added a "Hold Map" menu item (and toolbar button), to hold the map
+      when one tries to select a street or just check the map. Looking at
+      details when the map is moving is quite uncomfortable.
+  <LI>Added a "GPS position" entry in the Find menu.
+</UL>
 <P>Roadmap v1.0 (September 1, 2003): 
 <UL>
   <LI>The "trip direction" red arrow sprite was acting weird when moving
