--- a/roadmap/web/maps.html
+++ b/roadmap/web/maps.html
@@ -47,7 +47,7 @@ Thank you for your understanding.
 The RoadMap maps are available from the following mirror sites:
 <P>
 <A class=normal 
-         href="http://noscience.net/~pmartin/roadmap/">noscience.net</A> 
+         href="http://roadmap.noscience.net/">roadmap.noscience.net</A> 
 <P>
 <A class=normal 
          href="http://roadmap.digitalomaha.net/">roadmap.digitalomaha.net</A> 
@@ -64,9 +64,8 @@ which county or counties matche a specific geoposition or a specific address.
 This file must be present in the map directory or RoadMap will not work. 
 <P>
 <UL>
-  <LI><A class=normal 
-  href="/maps/usdir.rdm.tgz">RoadMap 
-  directory</A> </LI></UL>
+  <LI><A class=normal href="maps/usdir.rdm.tgz">RoadMap directory</A> </LI>
+</UL>
 <P>The following files are gzipped tar files that contains the RoadMap map 
 files, one tar file per state. (To install the map files: go to the final map 
 directory and extract the map files using the "tar xzf <i>DOWNLOADED-FILE</i>" 
@@ -78,177 +77,110 @@ command.)
   <TR vAlign=top>
     <TD>
       <UL>
-        <LI><A class=normal 
-        href="/maps/usAL.tar.gz">Alabama</A> 
+        <LI><A class=normal href="maps/usAL.tar.gz">Alabama</A> 
 
-        <LI><A class=normal 
-        href="/maps/usAK.tar.gz">Alaska</A> 
+        <LI><A class=normal href="maps/usAK.tar.gz">Alaska</A> 
 
-        <LI><A class=normal 
-        href="/maps/usAZ.tar.gz">Arizona</A> 
+        <LI><A class=normal href="maps/usAZ.tar.gz">Arizona</A> 
 
-        <LI><A class=normal 
-        href="/maps/usAR.tar.gz">Arkansas</A> 
+        <LI><A class=normal href="maps/usAR.tar.gz">Arkansas</A> 
 
-        <LI><A class=normal 
-        href="/maps/usCA.tar.gz">California</A> 
+        <LI><A class=normal href="maps/usCA.tar.gz">California</A> 
 
-        <LI><A class=normal 
-        href="/maps/usCO.tar.gz">Colorado</A> 
+        <LI><A class=normal href="maps/usCO.tar.gz">Colorado</A> 
 
-        <LI><A class=normal 
-        href="/maps/usCT.tar.gz">Connecticut</A> 
+        <LI><A class=normal href="maps/usCT.tar.gz">Connecticut</A> 
 
-        <LI><A class=normal 
-        href="/maps/usDE.tar.gz">Delaware</A> 
+        <LI><A class=normal href="maps/usDE.tar.gz">Delaware</A> 
 
-        <LI><A class=normal 
-        href="/maps/usDC.tar.gz">District 
-        of Columbia</A> 
-        <LI><A class=normal 
-        href="/maps/usFL.tar.gz">Florida</A> 
+        <LI><A class=normal href="maps/usDC.tar.gz">District of Columbia</A> 
+        <LI><A class=normal href="maps/usFL.tar.gz">Florida</A> 
 
-        <LI><A class=normal 
-        href="/maps/usGA.tar.gz">Georgia</A> 
+        <LI><A class=normal href="maps/usGA.tar.gz">Georgia</A> 
 
-        <LI><A class=normal 
-        href="/maps/usHI.tar.gz">hawaii</A> 
+        <LI><A class=normal href="maps/usHI.tar.gz">hawaii</A> 
 
-        <LI><A class=normal 
-        href="/maps/usID.tar.gz">Idaho</A> 
+        <LI><A class=normal href="maps/usID.tar.gz">Idaho</A> 
 
-        <LI><A class=normal 
-        href="/maps/usIL.tar.gz">Illinois</A> 
+        <LI><A class=normal href="maps/usIL.tar.gz">Illinois</A> 
 
-        <LI><A class=normal 
-        href="/maps/usIN.tar.gz">Indiana</A> 
+        <LI><A class=normal href="maps/usIN.tar.gz">Indiana</A> 
 
-        <LI><A class=normal 
-        href="/maps/usIA.tar.gz">Iowa</A> 
+        <LI><A class=normal href="maps/usIA.tar.gz">Iowa</A> 
 
-        <LI><A class=normal 
-        href="/maps/usKS.tar.gz">Kansas</A> 
+        <LI><A class=normal href="maps/usKS.tar.gz">Kansas</A> 
 
-        <LI><A class=normal 
-        href="/maps/usKY.tar.gz">Kentucky</A> 
+        <LI><A class=normal href="maps/usKY.tar.gz">Kentucky</A> 
 
-        <LI><A class=normal 
-        href="/maps/usLA.tar.gz">Louisiana</A> 
+        <LI><A class=normal href="maps/usLA.tar.gz">Louisiana</A> 
         </LI></UL></TD>
     <TD>
       <UL>
-        <LI><A class=normal 
-        href="/maps/usME.tar.gz">Maine</A> 
+        <LI><A class=normal href="maps/usME.tar.gz">Maine</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMD.tar.gz">Maryland</A> 
+        <LI><A class=normal href="maps/usMD.tar.gz">Maryland</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMA.tar.gz">Massachusetts</A> 
+        <LI><A class=normal href="maps/usMA.tar.gz">Massachusetts</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMI.tar.gz">Michigan</A> 
+        <LI><A class=normal href="maps/usMI.tar.gz">Michigan</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMN.tar.gz">Minnesota</A> 
+        <LI><A class=normal href="maps/usMN.tar.gz">Minnesota</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMS.tar.gz">Mississippi</A> 
+        <LI><A class=normal href="maps/usMS.tar.gz">Mississippi</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMO.tar.gz">Missouri</A> 
+        <LI><A class=normal href="maps/usMO.tar.gz">Missouri</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMT.tar.gz">Montana</A> 
+        <LI><A class=normal href="maps/usMT.tar.gz">Montana</A> 
 
-        <LI><A class=normal 
-        href="/maps/usNE.tar.gz">Nebraska</A> 
+        <LI><A class=normal href="maps/usNE.tar.gz">Nebraska</A> 
 
-        <LI><A class=normal 
-        href="/maps/usNV.tar.gz">Nevada</A> 
+        <LI><A class=normal href="maps/usNV.tar.gz">Nevada</A> 
 
-        <LI><A class=normal 
-        href="/maps/usNH.tar.gz">New 
-        Hampshire</A> 
-        <LI><A class=normal 
-        href="/maps/usNJ.tar.gz">New 
-        Jersey</A> 
-        <LI><A class=normal 
-        href="/maps/usNM.tar.gz">New 
-        Mexico</A> 
-        <LI><A class=normal 
-        href="/maps/usNY.tar.gz">New 
-        York</A> 
-        <LI><A class=normal 
-        href="/maps/usNC.tar.gz">North 
-        Carolina</A> 
-        <LI><A class=normal 
-        href="/maps/usND.tar.gz">North 
-        Dakota</A> 
-        <LI><A class=normal 
-        href="/maps/usOH.tar.gz">Ohio</A> 
+        <LI><A class=normal href="maps/usNH.tar.gz">New Hampshire</A> 
+        <LI><A class=normal href="maps/usNJ.tar.gz">New Jersey</A> 
+        <LI><A class=normal href="maps/usNM.tar.gz">New Mexico</A> 
+        <LI><A class=normal href="maps/usNY.tar.gz">New York</A> 
+        <LI><A class=normal href="maps/usNC.tar.gz">North Carolina</A> 
+        <LI><A class=normal href="maps/usND.tar.gz">North Dakota</A> 
+        <LI><A class=normal href="maps/usOH.tar.gz">Ohio</A> 
 
-        <LI><A class=normal 
-        href="/maps/usOK.tar.gz">Oklahoma</A> 
+        <LI><A class=normal href="maps/usOK.tar.gz">Oklahoma</A> 
 
-        <LI><A class=normal 
-        href="/maps/usOR.tar.gz">Oregon</A> 
+        <LI><A class=normal href="maps/usOR.tar.gz">Oregon</A> 
         </LI></UL></TD>
     <TD>
       <UL>
-        <LI><A class=normal 
-        href="/maps/usPA.tar.gz">Pennsylvania</A> 
+        <LI><A class=normal href="maps/usPA.tar.gz">Pennsylvania</A> 
 
-        <LI><A class=normal 
-        href="/maps/usRI.tar.gz">Rhode 
-        Island</A> 
-        <LI><A class=normal 
-        href="/maps/usSC.tar.gz">South 
-        Carolina</A> 
-        <LI><A class=normal 
-        href="/maps/usSD.tar.gz">South 
-        Dakota</A> 
-        <LI><A class=normal 
-        href="/maps/usTN.tar.gz">Tennessee</A> 
+        <LI><A class=normal href="maps/usRI.tar.gz">Rhode Island</A> 
+        <LI><A class=normal href="maps/usSC.tar.gz">South Carolina</A> 
+        <LI><A class=normal href="maps/usSD.tar.gz">South Dakota</A> 
+        <LI><A class=normal href="maps/usTN.tar.gz">Tennessee</A> 
 
-        <LI><A class=normal 
-        href="/maps/usTX.tar.gz">Texas</A> 
+        <LI><A class=normal href="maps/usTX.tar.gz">Texas</A> 
 
-        <LI><A class=normal 
-        href="/maps/usUT.tar.gz">Utah</A> 
+        <LI><A class=normal href="maps/usUT.tar.gz">Utah</A> 
 
-        <LI><A class=normal 
-        href="/maps/usVT.tar.gz">Vermont</A> 
+        <LI><A class=normal href="maps/usVT.tar.gz">Vermont</A> 
 
-        <LI><A class=normal 
-        href="/maps/usVA.tar.gz">Virginia</A> 
+        <LI><A class=normal href="maps/usVA.tar.gz">Virginia</A> 
 
-        <LI><A class=normal 
-        href="/maps/usWA.tar.gz">Washington</A> 
+        <LI><A class=normal href="maps/usWA.tar.gz">Washington</A> 
 
-        <LI><A class=normal 
-        href="/maps/usWV.tar.gz">West 
-        Virginia</A> 
-        <LI><A class=normal 
-        href="/maps/usWI.tar.gz">Wisconsin</A> 
+        <LI><A class=normal href="maps/usWV.tar.gz">West Virginia</A> 
+        <LI><A class=normal href="maps/usWI.tar.gz">Wisconsin</A> 
 
-        <LI><A class=normal 
-        href="/maps/usWY.tar.gz">Wyoming</A> 
+        <LI><A class=normal href="maps/usWY.tar.gz">Wyoming</A> 
 
-        <LI><A class=normal 
-        href="/maps/usAS.tar.gz">American 
-        Samoa</A> 
-        <LI><A class=normal 
-        href="/maps/usGU.tar.gz">Guam</A> 
+        <LI><A class=normal href="maps/usAS.tar.gz">American Samoa</A> 
+        <LI><A class=normal href="maps/usGU.tar.gz">Guam</A> 
 
-        <LI><A class=normal 
-        href="/maps/usMP.tar.gz">Mariana 
-        Islands</A> 
-        <LI><A class=normal 
-        href="/maps/usPR.tar.gz">Puerto 
-        Rico</A> 
-        <LI><A class=normal 
-        href="/maps/usVI.tar.gz">Virgin 
-        Islands</A> </LI></UL></TD></TR></TBODY></TABLE> 
+        <LI><A class=normal href="maps/usMP.tar.gz">Mariana Islands</A> 
+        <LI><A class=normal href="maps/usPR.tar.gz">Puerto Rico</A> 
+        <LI><A class=normal href="maps/usVI.tar.gz">Virgin Islands</A> </LI>
+      </UL>
+    </TD>
+  </TR>
+  </TBODY></TABLE> 
 </CENTER></BODY></HTML>
 
