--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -23,6 +23,9 @@ href="sitestandard.css" type=text/css rel=stylesheet>
       when one tries to select a street or just check the map. Looking at
       details when the map is moving is quite uncomfortable.
   <LI>Added a "GPS position" entry in the Find menu.
+  <LI>Separated the geocoding code from the address dialog code, so that
+      the geocoding function can be reused in other places without depending
+      on a GUI interface.
 </UL>
 <P>Roadmap v1.0 (September 1, 2003): 
 <UL>
